# camel-code-raisim-cpp

./: CMakeLists.txt
include/CAMEL/: OperationRobot.h  Robot.h  Simulation.h
include/CAN/: CanMotorX8ProV2.h
include/Filter/: LPF.cpp  LPF.h
include/Sensor/: MPU9250.cpp  MPU9250.h  RE22SC.cpp  RE22SC.h
include/SimulationUI/: simulationMainwindow.cpp  simulationMainwindow.h
include/TrajectoryGenerator/: BezierTrajectoryGenerator.cpp  BezierTrajectoryGenerator.h  CubicTrajectoryGenerator.cpp  CubicTrajectoryGenerator.h  RobotArmTrajectoryGenerator.cpp  RobotArmTrajectoryGenerator.h  RobotArmWayPoints.cpp  RobotArmWayPoints.h  SincurveTrajectoryGenerator.cpp  SincurveTrajectoryGenerator.h  legtrajectory.cpp  legtrajectory.h
include/Xbox/: XboxController.cpp  XboxController.h
rsc/: camel_double_bar_IceCream.urdf  camel_hard_IceCream.urdf  camel_momentum_inverted_pendulum.urdf  camel_single_leg_floating.urdf  camel_wheeledRobot.urdf  obstacle.urdf  test.urdf  test_a1leg.urdf  ur_five.urdf
rsc/camel_JHdog_single_leg/: JHdog_single_leg.urdf
rsc/camel_dong_dog/: calf.stl  calf2.stl  calf3.stl  camel_dong_dog.urdf  camel_dong_dog_one_leg.urdf  shoulder.stl  thigh.stl
rsc/camel_dong_dog_full/: Body.stl  R_calf.stl  R_shoulder.stl  R_thigh.stl  body1.stl  camel_dong_dog_full.urdf  l_calf.stl  l_shoulder.stl  l_thigh.stl  r_calf.stl  r_shoulder.stl  r_thigh.stl  shoulder.stl
rsc/camel_single_leg_right/: camel_single_swingleg.urdf
rsc/camel_two_leg/: camel_two_leg.urdf
rsc/test_a1_single_leg_right/: camel_single_leg.urdf  camel_single_leg_fixed.urdf
src/A1/: A1CollisionDetecter.h  A1JointPDController.cpp  A1JointPDController.h  A1JoyStick.cpp  A1JoyStick.h  A1MPCController.cpp  A1MPCController.h  A1Robot.cpp  A1Robot.h  A1Simulation.cpp  A1Simulation.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_mainwindow.h
src/CAMEL-Quad-SingleLeg/: SingleLeggedIDController.cpp  SingleLeggedMPCController.cpp  SingleLeggedMPCController.h  SingleLeggedMPCqpoases.cpp  SingleLeggedMPCqpoases.h  SingleLeggedPDController.cpp  SingleLeggedPDController.h  SingleLeggedRobot.cpp  SingleLeggedRobot.h  SingleLeggedSharedMemory.h  SingleLeggedSimulation.cpp  SingleLeggedSimulation.h  SwingLegController.cpp  SwingLegController.h
src/CAMEL-Quad-SingleLeg-DBI/: SingleLeggedPDController.cpp  SingleLeggedRobot.cpp  SingleLeggedRobot.h  SingleLeggedSimulation.cpp
src/CAMEL-Quad-SingleLeg-Operation/: SingleLeggedIDControllerOperation.cpp  SingleLeggedIDControllerOperation.h  SingleLeggedMPCOperation.cpp  SingleLeggedMPCOperation.h  SingleLeggedMPCqpoasesOperation.cpp  SingleLeggedMPCqpoasesOperation.h  SingleLeggedOperation.cpp  SingleLeggedOperation.h  SingleLeggedPDControllerOperation.cpp  SingleLeggedPDControllerOperation.h  SingleLeggedRobotOperation.cpp  SingleLeggedRobotOperation.h  SingleLeggedSharedMemoryOperation.h  ui_mainwindow.h
src/CAMEL-Quad-SingleLeg-Operation-Circle/: SingleLegCAN.cpp  SingleLegCAN.h  SingleLeggedOperation.cpp  SingleLeggedPDControllerOperation.cpp  SingleLeggedRobotOperation.cpp  SingleLeggedRobotOperation.h
src/CAMEL-Quad-TwoLeg/: TwoLeggedPDController.cpp  TwoLeggedPDController.h  TwoLeggedRobot.cpp  TwoLeggedRobot.h  TwoLeggedSimulation.cpp  TwoLeggedSimulation.h
src/CAMEL_Double_Bar_IceCream/: DoubleBarLQRController.cpp  DoubleBarLQRController.hpp  DoubleBarLinearEoMFinder.cpp  DoubleBarLinearEoMFinder.hpp  DoubleBarRBDLController.cpp  DoubleBarRBDLController.h  DoubleBarRobot.cpp  DoubleBarRobot.h  DoubleBarSharedMemory.h  DoubleBarSimulation.cpp  DoubleBarSimulation.h  DoubleBarStablePointFinder.cpp  DoubleBarStablePointFinder.h  DoubleBarSteadyStateCalculator.cpp  DoubleBarSteadyStateCalculator.h  DoubleBarTestController.cpp  DoubleBarTestController.h  IceCreamRobot.cpp  IceCreamRobot.h  IceCreamSharedMemory.h  IceCreamSimulation.cpp  IceCreamTestController.cpp  eFactor.hpp
src/CAMEL_Hard_IceCream/: IceCreamLQRController.cpp  IceCreamLQRController.h  IceCreamRobot.cpp  IceCreamRobot.h  IceCreamSharedMemory.h  IceCreamSimulation.cpp  IceCreamSimulation.h  IceCreamTestController.cpp  IceCreamTestController.h
src/CANINE/: CanineMain.cpp  CanineMain.h
src/CANINE-Leg/: CanineLegOperation.cpp
src/Dongdog/: DongdogsinglelegPDController.cpp  DongdogsinglelegPDController.h  DongdogsinglelegRobot.cpp  DongdogsinglelegRobot.h  DongdogsinglelegSimulation.cpp  DongdogsinglelegSimulation.h
src/FloatingSingleLegModel/: SingleLegRBDLController.cpp  SingleLegRBDLController.h  SingleLegRobot.cpp  SingleLegRobot.h  SingleLegSharedMemory.h  SingleLegSimulation.cpp  SingleLegSimulation.h
src/MIPwithIncline/: MIPILQRController.cpp  MIPILQRController.h  MIPIRobot.cpp  MIPIRobot.h  MIPISimulation.cpp
src/MomentumInvertedPendulum/: MIPLQRController.cpp  MIPLQRController.h  MIPMPCController.cpp  MIPMPCController.h  MIPPDController.cpp  MIPPDController.h  MIPPDDController.cpp  MIPPDDController.h  MIPRobot.cpp  MIPRobot.h  MIPSimulation.cpp  MIPSimulation.h
src/MomentumInvertedPendulum-Inclined/: MIPILQRController.cpp  MIPILQRController.h  MIPIRobot.cpp  MIPIRobot.h  MIPISimulation.cpp  MIPISimulation.h
src/RMDX8PRO/: RMDX8ProOperation.cpp  ui_mainwindow.h
src/RobotArm/: DistanceCalculator.cpp  DistanceCalculator.h  LineInterpolation.cpp  LineInterpolation.h  RemoveMatrix.cpp  RemoveMatrix.h  RobotArmCollisionChecker.cpp  RobotArmCollisionChecker.h  RobotArmForwardKinematics.cpp  RobotArmForwardKinematics.h  RobotArmMotionPlanning.cpp  RobotArmMotionPlanning.h  RobotArmPDController.cpp  RobotArmPDController.h  RobotArmRobot.cpp  RobotArmRobot.h  RobotArmSimulation.cpp  RobotArmSimulation.h
src/Robotarm/: RobotarmSimulation.cpp
src/SimplePendulum/: SimplePendulumSimulation.cpp
src/Test/: A1CollisionDetecter.cpp  A1CollisionDetecter.h  A1CollisionDetecterNoInertia.cpp  A1CollisionDetecterNoInertia.h  Test_Eigen.cpp  Test_RBDL.cpp  Test_RealTimeGraph.cpp  Test_RealTimeThread.cpp  Test_SGDmodel.cpp  Test_SensorMPU9250.cpp  Test_WriteCSV.cpp  Test_calculateInertia.cpp  Test_encoderRE22SC.cpp  Test_fr_cd.cpp  Test_trajectoryGenerator.cpp  Test_urdf.cpp  (+3 more)
(+95 files in other folders)
